fixed spacing details for navbar, refactored navbar to be responsive

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -10,6 +10,9 @@ p {
     margin: 0;
 }
 
+* {
+    /* outline: 1px solid red; */
+}
 
 
 @font-face {
